--- a/Clustering_Salju.ipynb
+++ b/Clustering_Salju.ipynb
@@ -27,7 +27,7 @@
         "\n",
         "Syamsul Rizal\n",
         "\n",
-        "1301184064\n",
+        "130118xxxx\n",
         "\n",
         "IF-42-01"
       ]
